<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wxstc.spark</groupId>
    <artifactId>spark-driver-elastic</artifactId>
    <packaging>pom</packaging>
    <version>0.1</version>

    <properties>
        <wormhole.version>0.6.0</wormhole.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <scala.version>2.11.8</scala.version>
        <scala.binary.version>2.11</scala.binary.version>
        <scalatest.version>2.2.5</scalatest.version>
        <kafka.version>0.10.2.2</kafka.version>
        <hadoop.version>2.7.1</hadoop.version>
        <hbase.version>1.1.3</hbase.version>
        <hive.version>1.2.1</hive.version>
        <spark.version>2.3.2</spark.version>
        <flink.version>1.7.2</flink.version>
        <!--<flink.version>1.5.1</flink.version>-->
        <slf4j.version>1.7.21</slf4j.version>
        <zookeeper.version>3.4.6</zookeeper.version>
        <bijection-avro.version>0.9.6</bijection-avro.version>
        <mysql-connector.version>8.0.11</mysql-connector.version>

        <ons.version>1.8.4.Final</ons.version>
        <emr-ons.version>2.0.0</emr-ons.version>

        <blink.version>blink-3.3.0</blink.version>
        <rocketmq.version>4.5.2</rocketmq.version>
    </properties>

    <modules>
        <module>driver-plugin-core</module>
    </modules>


    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.16</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.28</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>3.0.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.1.42.Final</version>
            </dependency>

            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-core_2.11</artifactId>
                <version>2.3.2</version>
            </dependency>

            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-sql_2.11</artifactId>
                <version>2.3.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <!--这里的id需要和settings.xml中的server的id一致-->
            <id>nexus-scistor</id>
            <name>Nexus release Repository</name>
            <!--releases仓库-->
            <url>http://192.168.31.193:8088/repository/nexus-scistor/</url>
        </repository>
        <snapshotRepository>
            <id>nexus-scistor</id>
            <name>Nexus Snapshot</name>
            <url>http://192.168.31.193:8088/repository/nexus-scistor/</url>
        </snapshotRepository>
        <site>
            <id>nexus-scistor</id>
            <name>Nexus Sites</name>
            <url>http://192.168.31.193:8088/repository/nexus-scistor/</url>
        </site>
        <!--<repository>-->
        <!--<id>dist-nexus</id>-->
        <!--<url>${release.url}</url>-->
        <!--</repository>-->
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <!-- The scala-maven-plugin is used for compiling/testing/running/documenting scala code in maven -->
                <version>3.2.2</version>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
                    <recompileMode>incremental</recompileMode>
                    <useZincServer>false</useZincServer>
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                    </args>
                    <jvmArgs>
                        <!--<jvmArg>-Xss2m</jvmArg>-->
                        <jvmArg>-Xms512M</jvmArg>
                        <jvmArg>-Xmx2048M</jvmArg>
                        <jvmArg>-XX:MaxPermSize=2048M</jvmArg>
                        <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                    </jvmArgs>
                    <javacArgs>
                        <javacArg>-source</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-target</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-Xlint:all,-serial,-path</javacArg>
                    </javacArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- The Compiler Plugin is used to compile the sources of your project -->
                <version>3.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerVersion>${java.version}</compilerVersion>
                    <optimize>true</optimize>
                    <maxmem>1024m</maxmem>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>-Xlint:all,-serial,-path</arg>
                    </compilerArgs>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>